--- a/_posts/2016-09-29-API.md
+++ b/_posts/2016-09-29-API.md
@@ -1,6 +1,6 @@
----
+ï»¿---
 layout: post
-title:  "Ò»Ğ©api½Ó¿Ú!"
+title:  "ä¸€äº›apiæ¥å£!"
 date:   2016-09-29
 categories: api
 tag: api
@@ -12,6 +12,6 @@ tag: api
 
 12306
 
-[µØÃûËõĞ´¶ÔÕÕ±í]https://kyfw.12306.cn/otn/resources/js/framework/station_name.js?station_version=1.8902
-[²éÑ¯½Ó¿Ú]https://kyfw.12306.cn/otn/leftTicket/queryT?leftTicketDTO.train_date=2016-02-24&leftTicketDTO.from_station=BJP&leftTicketDTO.to_station=CSQ&purpose_codes=ADULT
+[åœ°åç¼©å†™å¯¹ç…§è¡¨]https://kyfw.12306.cn/otn/resources/js/framework/station_name.js?station_version=1.8902
+[æŸ¥è¯¢æ¥å£]https://kyfw.12306.cn/otn/leftTicket/queryT?leftTicketDTO.train_date=2016-02-24&leftTicketDTO.from_station=BJP&leftTicketDTO.to_station=CSQ&purpose_codes=ADULT
  
