修改编码格式

--- a/_posts/tool/2016-10-09-打开应用设置.md
+++ b/_posts/tool/2016-10-09-打开应用设置.md
@@ -1,16 +1,16 @@
----
+ï»¿---
 layout: post
-title: ´ò¿ª±¾Ó¦ÓÃÏêÇé
-category: ¹¤¾ß
+title: æ‰“å¼€æœ¬åº”ç”¨è¯¦æƒ…
+category: å·¥å…·
 tags: Blog
-keywords: tootls£¬setting
+keywords: tootlsï¼Œsetting
 description: 
 ---		
-¡¤¡¤¡¤		
+Â·Â·Â·		
 		Intent intent = new Intent();
 		intent.setAction(Settings.ACTION_APPLICATION_DETAILS_SETTINGS);
 		Log.d(TAG, "getPackageName(): " + this.getPackageName());
 		Uri uri = Uri.fromParts("package", this.getPackageName(), null);
 		intent.setData(uri);
 		this.startActivity(intent);
-¡¤¡¤¡¤
+Â·Â·Â·
